<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_destination"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <!-- Spinner for destination selection -->

    <Spinner
        android:id="@+id/destinationSpinner"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_bus_type"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <!-- RadioGroup for bus type selection -->
    <RadioGroup
        android:id="@+id/busTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/radioNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_10"/>

        <RadioButton
            android:id="@+id/radioExpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/express_20"/>

        <RadioButton
            android:id="@+id/radioDeluxe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deluxe_30"/>
    </RadioGroup>

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_0"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_selection"/>




</LinearLayout>







