<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_your_bus"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:marginBottom="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:text="@string/select_date" />


    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/mm_dd_yyyy1"
        android:inputType="date"/>

    <Button
        android:id="@+id/chooseBusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_bus1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>

